.collapseContent background fix

--- a/PINK/theme.css
+++ b/PINK/theme.css
@@ -594,7 +594,7 @@ div.card.activeSession > div > div:nth-child(2) {
   border-top: 1px solid #262626 !important;
   color: #ffffff !important; }
 
-.ui-body-a .collapseContent {
+.collapseContent {
   background-color: #080808 !important; }
 
 /* Organization Table - Not Future Proof */
